meja/tests/list_wrong_type.stderr
File "tests/list_wrong_type.meja", line 3, characters 16-17:
Error: Incompatable types list(bool) and list(int):
       Cannot unify bool and int
